[project]
name = "tax_policy_env"
version = "1.0.0"
description = "AI Tax Policy Optimization Environment"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"